# rapiscm

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  Architecture.md  Build.md  CHANGELOG.md  Cargo.toml  Contributing.md  Dockerfile  LICENSE  PLAN.md  README.md  Roadmap.md  SPEC.md  deny.toml  install.sh
.agents/: SPEC.md  plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  sync-wiki.yml
.scratch/v0.2-release/: spec.md  tickets.md
docs/: architecture.md  build.md  features.md  installation.md  roadmap.md  security-topic.md  usage.md  wiki.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/decisions/: ADR-001-task-system.md  ADR-002-ghost-mode.md  ADR-003-js-bundle-scanning.md  ADR-004-wiki-sync.md
homebrew/: rapiscm.rb
reports/corps/: perchance-report.md
scripts/: build.sh  deps.sh  dev-env  install.sh  packages  sync-wiki.sh
src/: cli.rs  config.rs  error.rs  ghost.rs  lib.rs  main.rs  types.rs  util.rs
src/analytics/: cookies.rs  detect.rs  export.rs  mod.rs  profile.rs  sigdb.rs
src/check/: auth.rs  cors.rs  jwt.rs  mod.rs  schema.rs  security.rs  trackers.rs
src/deepspec/: mod.rs
src/discover/: asn.rs  crtsh.rs  favicon.rs  gaid.rs  mod.rs  rdap.rs  search.rs
src/extract/: headers.rs  html.rs  js.rs  json.rs  mod.rs  sitemap.rs
src/filter/: mod.rs
src/fuzz/: matcher.rs  mod.rs  runner.rs  wordlist.rs
src/parser/: js_bundle.rs  mod.rs  spec.rs  url.rs
src/report/: doc.rs  json.rs  mod.rs  sarif.rs  site.rs  summary.rs  (+1 more)
tasks/: plan.md  todo.md
tests/: scan_test.rs
(+221 files in other folders)
