[package]
name = "rapiscm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "API security scanner — OpenAPI spec scanning, URL crawling, fuzzing, corporate domain discovery"
repository = "https://github.com/grave0x/rapiscm"
keywords = ["api", "security", "scanner", "openapi", "fuzzer"]
categories = ["command-line-utilities", "development-tools::testing"]

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true

[features]
default = []
browser = ["dep:chromiumoxide", "dep:fantoccini"]
ip = []

[dependencies]
anyhow = "1"
base64 = "0.22"
chromiumoxide = { version = "0.7", optional = true }
clap = { version = "4", features = ["derive"] }
fantoccini = { version = "0.21", optional = true }
futures-util = "0.3"
openapiv3 = "2"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
